--- a/video-player.html
+++ b/video-player.html
@@ -1262,6 +1262,53 @@
           "4": { link:'https://www.dropbox.com/scl/fi/ytpnotvj9rurxs20nwxmk/Tsugunai-Subbed-Cap-4.mp4?rlkey=f9h9k3olzzyzlosstu3u34g0v&st=eb8imc60&raw=1', title:'Tsugunai Subbed SUB Cap 4' },
         }
       },
+      "33": {
+        "1": {
+          "1": { link:'https://www.dropbox.com/scl/fi/ak2140ne7k7jx8nbqua0h/Blue-Lock-T1-Cap-1.mp4?rlkey=lwcpfzmza2uoi6upktekt2c7s&st=zr1ps51x&raw=1', title:'Blue Lock T1 Cap 1' },
+          "2": { link:'https://www.dropbox.com/scl/fi/ovu81omlo5m6r1yqjtaiw/Blue-Lock-T1-Cap-2.mp4?rlkey=fd9jqjl1wfbghxcfqfxt6afj0&st=zfvgbrso&raw=1', title:'Blue Lock T1 Cap 2' },
+          "3": { link:'https://www.dropbox.com/scl/fi/myxlkij28jbpn7c5g3465/Blue-Lock-T1-Cap-3.mp4?rlkey=dtzvunex3rosyatfce4kj83ca&st=661k6h1x&raw=1', title:'Blue Lock T1 Cap 3' },
+          "4": { link:'https://www.dropbox.com/scl/fi/36075yncgnmw9qeqi0ym1/Blue-Lock-T1-Cap-4.mp4?rlkey=l4x1mo97ws4ys36dfyx4m5vth&st=ep4c4m44&raw=1', title:'Blue Lock T1 Cap 4' },
+          "5": { link:'https://www.dropbox.com/scl/fi/v8q3axk7flcogct612dzm/Blue-Lock-T1-Cap-5.mp4?rlkey=z5yjwad7t3hhoupvvgw52yxwh&st=x1qiu6jt&raw=1', title:'Blue Lock T1 Cap 5' },
+          "6": { link:'https://www.dropbox.com/scl/fi/c52ruhw5pif77945nxtiw/Blue-Lock-T1-Cap-6.mp4?rlkey=l75qftqh8ehol34fhh6n54kvw&st=33ogkuf0&raw=1', title:'Blue Lock T1 Cap 6' },
+          "7": { link:'https://www.dropbox.com/scl/fi/ugybfxnkojurv8uhg4f82/Blue-Lock-T1-Cap-7.mp4?rlkey=y949iygueghzk81xvc68zo68p&st=c27mjg4w&raw=1', title:'Blue Lock T1 Cap 7' },
+          "8": { link:'https://www.dropbox.com/scl/fi/0eadzikw6713wjqonvbkp/Blue-Lock-T1-Cap-8.mp4?rlkey=4utwj5gw7xqsy9qu3k7otl2nk&st=znbtt0z1&raw=1', title:'Blue Lock T1 Cap 8' },
+          "9": { link:'https://www.dropbox.com/scl/fi/fgxzgrv5vvr92ru8071nc/Blue-Lock-T1-Cap-9.mp4?rlkey=7j044bbvlat8nsvmruiw9fb5g&st=oxuyzt8w&raw=1', title:'Blue Lock T1 Cap 9' },
+          "10": { link:'https://www.dropbox.com/scl/fi/jjdrquo9ja4xrvq9gf3w8/Blue-Lock-T1-Cap-10.mp4?rlkey=v5svngtczt0o7v5p79tohm764&st=lb06u2yo&raw=1', title:'Blue Lock T1 Cap 10' },
+          "11": { link:'https://www.dropbox.com/scl/fi/s58ytckfwnl40f87b6ajd/Blue-Lock-T1-Cap-11.mp4?rlkey=bputg5sfp7rqnr83d166au52n&st=glo4dipz&raw=1', title:'Blue Lock T1 Cap 11' },
+          "12": { link:'https://www.dropbox.com/scl/fi/fn1pjzyiuntgr138t1zt2/Blue-Lock-T1-Cap-12.mp4?rlkey=w0kyzg7mxablmpepx15jbsrhk&st=5ed9heo2&raw=1', title:'Blue Lock T1 Cap 12' },
+          "13": { link:'https://www.dropbox.com/scl/fi/6m9scfhiyzngzkz9ysakn/Blue-Lock-T1-Cap-13.mp4?rlkey=rmsvhe6u7zos7j1nza99ju6i9&st=iwaarg4y&raw=1', title:'Blue Lock T1 Cap 13' },
+          "14": { link:'https://www.dropbox.com/scl/fi/3r25gq78f9np2vp1sodvn/Blue-Lock-T1-Cap-14.mp4?rlkey=lssm8077clnq0anexa5323ixv&st=h9ijuadv&raw=1', title:'Blue Lock T1 Cap 14' },
+          "15": { link:'https://www.dropbox.com/scl/fi/kir6336oxbnkaes535fqb/Blue-Lock-T1-Cap-15.mp4?rlkey=eq7zes35wb18h5p9h725qvxr5&st=yprezoq8&raw=1', title:'Blue Lock T1 Cap 15' },
+          "16": { link:'https://www.dropbox.com/scl/fi/ijwt736el29dnmtrq1q3x/Blue-Lock-T1-Cap-16.mp4?rlkey=u85fnetct5dm5d6sb6nthwwof&st=o2o92ywk&raw=1', title:'Blue Lock T1 Cap 16' },
+          "17": { link:'https://www.dropbox.com/scl/fi/56eicy5l3ftvvvmcglozn/Blue-Lock-T1-Cap-17.mp4?rlkey=vsrtxut66vlu39ibxc138mna2&st=mutme1q0&raw=1', title:'Blue Lock T1 Cap 17' },
+          "18": { link:'https://www.dropbox.com/scl/fi/oblxadsrjq9sv1vqp2sw4/Blue-Lock-T1-Cap-18.mp4?rlkey=01xpkivxqfpq8xze988412y9p&st=aetvfot2&raw=1', title:'Blue Lock T1 Cap 18' },
+          "19": { link:'https://www.dropbox.com/scl/fi/kfcscbyas24ux5y994yc3/Blue-Lock-T1-Cap-19.mp4?rlkey=0baukhbxfr3ct392q6eoy9ros&st=dehckbig&raw=1', title:'Blue Lock T1 Cap 19' },
+          "20": { link:'https://www.dropbox.com/scl/fi/0kl6u2l0ihremxw8u0vzy/Blue-Lock-T1-Cap-20.mp4?rlkey=ajgyj8ca5zuo7sqqubm3khx21&st=297z3vux&raw=1', title:'Blue Lock T1 Cap 20' },
+          "21": { link:'https://www.dropbox.com/scl/fi/fbnu1iq2kknw9zb85cbcd/Blue-Lock-T1-Cap-21.mp4?rlkey=pfowgavp6n2ra5v2symv4wmp9&st=b9omddis&raw=1', title:'Blue Lock T1 Cap 21' },
+          "22": { link:'https://www.dropbox.com/scl/fi/aoi21ncj8tqv72kstvmd0/Blue-Lock-T1-Cap-22.mp4?rlkey=oj027bxi31xh452ksyjzx9mek&st=dtuobvqh&raw=1', title:'Blue Lock T1 Cap 22' },
+          "23": { link:'https://www.dropbox.com/scl/fi/097637jyiscsyrd0ivpwz/Blue-Lock-T1-Cap-23.mp4?rlkey=2zt6voofru6voqmgxcwti2489&st=veukeds0&raw=1', title:'Blue Lock T1 Cap 23' },
+          "24": { link:'https://www.dropbox.com/scl/fi/03lbkfiv0j3tcij7qu76w/Blue-Lock-T1-Cap-24.mp4?rlkey=yp36ed4vfa8vx4e65ol8pzg6d&st=wds1avxk&raw=1', title:'Blue Lock T1 Cap 24' },
+        },
+        "2": {
+          "1": { link:'https://www.dropbox.com/scl/fi/kx1ws1iu15zwtikdpip9o/Blue-Lock-La-Pel-cula-Episodio-Nagi.mp4?rlkey=b0vv98lw53qbn018dbya4yxwn&st=imp3xbyc&raw=1', title:'Blue Lock La Película: Episodio Nagi' },
+        },
+        "3": {
+          "1": { link:'https://www.dropbox.com/scl/fi/k5cf8eq6k0fsohohd6tip/Blue-Lock-T2-Cap-1.mp4?rlkey=y0j56u9ymn0cdre196xyi6qml&st=y0546mnw&raw=1', title:'Blue Lock T2 Cap 1' },
+          "2": { link:'https://www.dropbox.com/scl/fi/dcjyeps50xs9g0pa5exs4/Blue-Lock-T2-Cap-2.mp4?rlkey=qoqphefx8mha0itjl2xbi62ml&st=0aovi99h&raw=1', title:'Blue Lock T2 Cap 2' },
+          "3": { link:'https://www.dropbox.com/scl/fi/yxljxeg9ui7he2s7hryqy/Blue-Lock-T2-Cap-3.mp4?rlkey=whmwycj22oa60wnrbi6fa03hu&st=ur4tzfxm&raw=1', title:'Blue Lock T2 Cap 3' },
+          "4": { link:'https://www.dropbox.com/scl/fi/ubogfyqscz72mf7gdzj7d/Blue-Lock-T2-Cap-4.mp4?rlkey=4ayl3lm39zht2lb2dbi5e290v&st=asx18xtn&raw=1', title:'Blue Lock T2 Cap 4' },
+          "5": { link:'https://www.dropbox.com/scl/fi/b0fbqejptef3off0jkq6e/Blue-Lock-T2-Cap-5.mp4?rlkey=31shlfkxmdfqq1nfuy3ibcipq&st=lq4l4egf&raw=1', title:'Blue Lock T2 Cap 5' },
+          "6": { link:'https://www.dropbox.com/scl/fi/kk1o20c1p2svzpawm2fkk/Blue-Lock-T2-Cap-6.mp4?rlkey=66zhoqv3nimpvwubsd3bdv9ks&st=n3xio9pq&raw=1', title:'Blue Lock T2 Cap 6' },
+          "7": { link:'https://www.dropbox.com/scl/fi/a4volk26313fimw62v82d/Blue-Lock-T2-Cap-7.mp4?rlkey=zmmwptxrlzn0eqlyaqlgc4lq2&st=f7faxtq5&raw=1', title:'Blue Lock T2 Cap 7' },
+          "8": { link:'https://www.dropbox.com/scl/fi/t5aj5rhmmj29d404z53xc/Blue-Lock-T2-Cap-8.mp4?rlkey=px29eoils5i2smkp41q9fuh6u&st=6dcbxkq8&raw=1', title:'Blue Lock T2 Cap 8' },
+          "9": { link:'https://www.dropbox.com/scl/fi/s68uhu7qdsmqq9pewtsfb/Blue-Lock-T2-Cap-9.mp4?rlkey=okvvhz3bqo94lk1f60gkgbs6k&st=kzcvrf6p&raw=1', title:'Blue Lock T2 Cap 9' },
+          "10": { link:'https://www.dropbox.com/scl/fi/gh38o1f424c75054vsenj/Blue-Lock-T2-Cap-10.mp4?rlkey=3yuh7syimzb9iyr0vn1qkdtq0&st=0nh5op1l&raw=1', title:'Blue Lock T2 Cap 10' },
+          "11": { link:'https://www.dropbox.com/scl/fi/11xuv5px0927dl02v69hh/Blue-Lock-T2-Cap-11.mp4?rlkey=zgowu647xe0sve5u32y11gufx&st=c0vgdgvp&raw=1', title:'Blue Lock T2 Cap 11' },
+          "12": { link:'https://www.dropbox.com/scl/fi/s1jkuqqs6iym6hth5oi8i/Blue-Lock-T2-Cap-12.mp4?rlkey=ip9v8ghxwnq1pptpfpn2bniu5&st=8lvixz6j&raw=1', title:'Blue Lock T2 Cap 12' },
+          "13": { link:'https://www.dropbox.com/scl/fi/wsf2vpm3kuwkzqi301ndu/Blue-Lock-T2-Cap-13.mp4?rlkey=cyo0ako2nuidqoiikxf7bsnhx&st=r2jn05k0&raw=1', title:'Blue Lock T2 Cap 13' },
+          "14": { link:'https://www.dropbox.com/scl/fi/d63q9umjenous319tjrdj/Blue-Lock-T2-Cap-14.mp4?rlkey=yxgvot0841151gxlwm7o5kuct&st=o6b39go6&raw=1', title:'Blue Lock T2 Cap 14' },
+        }
+      },
       "37": {
         "1": {
           "1": { link:'https://www.dropbox.com/scl/fi/wiu9vhmz4j83rhz6927lj/Shinsei-Kourin-Dacryon-Luna-Cap-1-Sub-Espa-ol.mp4?rlkey=cijr65vftkrtexv3b21tjdbzz&st=5sit9huw&raw=1', title:'Shinsei Kourin Dacryon Luna SUB Cap 1' },
