--- a/anime-detail.html
+++ b/anime-detail.html
@@ -331,6 +331,14 @@
               { title: "Jujutsu Kaisen T2 Cap 21"},
               { title: "Jujutsu Kaisen T2 Cap 22"},
               { title: "Jujutsu Kaisen T2 Cap 23"},
+            ]
+          },
+          {
+            num: 4,
+	  name: "Temporada 3",
+            cover: "https://www.dropbox.com/scl/fi/p0r8u7687ctb0gborj1xz/jujutsukaisent3.jpg?rlkey=ok9566cz3v673sjq26dibuwrs&st=ztf57nog&raw=1",
+            eps: [
+              { title: "Jujutsu Kaisen T3 Trailer"},
           ]
         }
       ]
