--- a/video-player.html
+++ b/video-player.html
@@ -245,7 +245,6 @@
           "22":  { link:'https://www.dropbox.com/scl/fi/l8ls4l2zk37hnav923gu3/Jujutsu-Kaisen-temporada-22.mp4?rlkey=nyxngah5zxsm2x1fx6o04vr1p&st=b8omtoij&raw=1', title:'Jujutsu Kaisen T1 Cap 22' },
           "23":  { link:'https://www.dropbox.com/scl/fi/p3bxqu3wmrg9tfgf7z5ka/Jujutsu-Kaisen-temporada-23.mp4?rlkey=szn8hoybnbbbkn7wwizl2q56a&st=mhaagnyx&raw=1', title:'Jujutsu Kaisen T1 Cap 23' },
           "24":  { link:'https://www.dropbox.com/scl/fi/6bp5ck93o4d773ejwrxky/Jujutsu-Kaisen-temporada-24.mp4?rlkey=6tvj0gfnnbh3smg2s4mfjjcv0&st=21a6xnaq&raw=1', title:'Jujutsu Kaisen T1 Cap 24' },
-
         },
         "3": {
           "1":  { link:'https://www.dropbox.com/scl/fi/gaaiu3pglnf640ex5g2yg/Jujutsu-Kaisen-capitulo-1-temporada-2.mp4?rlkey=qe600rpf3fslze8tj046645um&st=matr26u0&raw=1', title:'Jujutsu Kaisen T2 Cap 1' },
@@ -271,6 +270,9 @@
           "21":  { link:'https://www.dropbox.com/scl/fi/i6xitgfi7sy3f9mxpp0c5/Jujutsu-Kaisen-capitulo-21-temporada-2.mp4?rlkey=3c8z9yjewqmv2fnti5tm0s0c6&st=o9sc0n1c&raw=1', title:'Jujutsu Kaisen T2 Cap 21' },
           "22":  { link:'https://www.dropbox.com/scl/fi/whtgi5o2alg1xk966h1nr/Jujutsu-Kaisen-capitulo-22-temporada-2.mp4?rlkey=ivcw62kxsfe8o661bf2cti5bo&st=i9vlyop4&raw=1', title:'Jujutsu Kaisen T2 Cap 22' },
           "23":  { link:'https://www.dropbox.com/scl/fi/nszyv5ba2w9dywbrazp8v/Jujutsu-Kaisen-capitulo-23-temporada-2.mp4?rlkey=yko7livmuwj8tpr5tr9blauxz&st=sw0v2pbf&raw=1', title:'Jujutsu Kaisen T2 Cap 23' }
+        },
+        "4": {
+          "1":  { link:'https://www.dropbox.com/scl/fi/pr3wttsc20yj9dm5utxzq/JUJUTSU-KAISEN-Season-3-Official-Teaser-Crunchyroll.mp4?rlkey=2zkezvujzyr7yqvm1x8mzfkhi&st=wi8uxffb&raw=1', title:'Jujutsu Kaisen T3 Trailer' },
         }
       },
       "3": {
@@ -666,7 +668,7 @@
           "19": { link:'https://www.dropbox.com/scl/fi/naldcku7l4sjmhdm6a4j8/To-Be-Hero-X-Cap-19.mp4?rlkey=gmr4rpdbdn7oqj5lme85s7htv&st=cp1skbw0&raw=1', title:'To Be Hero X T1 Cap 19' },
           "20": { link:'https://www.dropbox.com/scl/fi/spbtwk5bktqy709vq5u1y/To-Be-Hero-X-Cap-20.mp4?rlkey=hjs520pkn5sm2biuxxn59p62o&st=il41a4rz&raw=1', title:'To Be Hero X T1 Cap 20' },
           "21": { link:'https://www.dropbox.com/scl/fi/7u4u7rga0ied7sl5owvez/To-Be-Hero-X-T1-Cap-21.mp4?rlkey=471mvp9h0y0p8d4ydurqjivrz&st=s7ydz9re&raw=1', title:'To Be Hero X T1 Cap 21' },
-          "22": { link:'&raw=1', title:'To Be Hero X T1 Cap 22' },
+          "22": { link:'https://www.dropbox.com/scl/fi/7lz27n4cw847y37jqsf6x/To-Be-Hero-X-Cap-22.mp4?rlkey=nyj9297zqdu30t5mgo5ehsuu8&st=9hmsacaf&raw=1', title:'To Be Hero X T1 Cap 22' },
           "23": { link:'&raw=1', title:'To Be Hero X T1 Cap 23' },
           "24": { link:'&raw=1', title:'To Be Hero X T1 Cap 24' },
         }
@@ -1063,7 +1065,7 @@
           "4": { link:'https://www.dropbox.com/scl/fi/b0s0yt408e1jv8oq8gcgs/Kaiju-No.-8-T2-Cap-4.mp4?rlkey=th0vbzd9bw3a8qnj49557vv3r&st=u29ncg1p&raw=1', title:'Kaiju No. 8 T2 Cap 4' },
           "5": { link:'https://www.dropbox.com/scl/fi/95q9p2afam8wxov8af5d3/Kaiju-No.-8-T2-Cap-5.mp4?rlkey=nbve7du4759k0cn9wc9npiugi&st=ldm6yzyo&raw=1', title:'Kaiju No. 8 T2 Cap 5' },
           "6": { link:'https://www.dropbox.com/scl/fi/lg081b9m5gl7uci9wwd1z/Kaiju-No.-8-T2-Cap-6.mp4?rlkey=6r2sf5fl89k52vjs9tpv49e42&st=j3fhzdy8&raw=1', title:'Kaiju No. 8 T2 Cap 6' },
-          "7": { link:'&raw=1', title:'Kaiju No. 8 T2 Cap 7' },
+          "7": { link:'https://www.dropbox.com/scl/fi/wpka0g4t6ttewn2w71noi/Kaiju-No.-8-T2-Cap-7.mp4?rlkey=963nkht488ethbfgntmpd98e3&st=fhowdymo&raw=1', title:'Kaiju No. 8 T2 Cap 7' },
           "8": { link:'&raw=1', title:'Kaiju No. 8 T2 Cap 8' },
           "9": { link:'&raw=1', title:'Kaiju No. 8 T2 Cap 9' },
           "10": { link:'&raw=1', title:'Kaiju No. 8 T2 Cap 10' },
